--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <img src="https://placedog.net/500" alt="Image de chien">
   <app-root></app-root>
 </body>
 </html>
